Working complete refactor

--- a/notebooks/analysis/example.ipynb
+++ b/notebooks/analysis/example.ipynb
@@ -16,18 +16,10 @@
     "print(\"--- INICIANDO SETUP E INICIALIZAÇÃO ---\")\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from pathlib import Path\n",
-    "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as mticker\n",
-    "\n",
-    "# Adiciona o diretório 'Code' ao path para encontrar o DataUtils\n",
-    "code_dir = Path('..').resolve() / 'Code'\n",
-    "if str(code_dir) not in sys.path:\n",
-    "    sys.path.append(str(code_dir))\n",
-    "\n",
-    "from DataUtils import AnalisadorBancario\n",
+    "from bacen_analysis import AnalisadorBancario\n",
     "\n",
     "# Configurações de exibição do Pandas e Matplotlib\n",
     "pd.set_option('display.float_format', lambda x: f'{x:,.2f}')\n",
@@ -35,7 +27,7 @@
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "\n",
     "# Inicializa o Analisador (carrega todos os dados em memória)\n",
-    "output_dir = Path('..').resolve() / 'Output'\n",
+    "output_dir = Path('../../data/output').resolve()\n",
     "analisador = AnalisadorBancario(diretorio_output=str(output_dir))\n",
     "\n",
     "print(\"\\n--- SETUP CONCLUÍDO. ANALISADOR PRONTO PARA USO. ---\")"
@@ -74,7 +66,7 @@
     "dados_ifdata = analisador.get_dados_ifdata(\n",
     "    identificador='60701190', # CNPJ do Itaú Unibanco\n",
     "    contas=['Índice de Basileia', 'Lucro Líquido'],\n",
-    "    datas=202403,\n",
+    "    datas=202506,\n",
     "    escopo='individual' # Buscando o dado da instituição, não do conglomerado.\n",
     ")\n",
     "print(\"Resultado para 'ITAÚ UNIBANCO S.A.' (IF.DATA Individual):\")\n",
@@ -120,7 +112,7 @@
     "tabela_comparativa = analisador.comparar_indicadores(\n",
     "    identificadores=bancos,\n",
     "    indicadores=indicadores,\n",
-    "    data=202403\n",
+    "    data=202506\n",
     ")\n",
     "print(\"Comparativo de indicadores para os principais bancos:\")\n",
     "display(tabela_comparativa)\n",
@@ -133,8 +125,8 @@
     "serie_lucro_bbtg = analisador.get_serie_temporal_indicador(\n",
     "    identificador='BTG Pactual',\n",
     "    conta='Lucro Líquido',\n",
-    "    data_inicio=202201,\n",
-    "    data_fim=202312,\n",
+    "    data_inicio=202301,\n",
+    "    data_fim=202506,\n",
     "    fonte='IFDATA',\n",
     "    escopo_ifdata='prudencial', # Buscando o lucro do conglomerado\n",
     "    drop_na=False # Mantém os meses sem dados como NaN para visualização\n",
@@ -171,7 +163,7 @@
     "# --- 3.1: Comparando Escopos no IF.DATA ---\n",
     "print(\"\\n--- 3.1: Diferença entre escopos de dados no IF.DATA ---\")\n",
     "conta_imob = 'Ativo Total'\n",
-    "data_imob = 202312\n",
+    "data_imob = 202503\n",
     "id_bradesco = 'BANCO BRADESCO S.A.'\n",
     "\n",
     "# Usando o novo parâmetro `escopo` para comparar os mesmos dados\n",
@@ -190,7 +182,7 @@
     "print(\"\\n--- 3.2: Flexibilidade no tratamento de nulos e zeros ---\")\n",
     "banco_serie = 'Banco Inter'\n",
     "conta_serie = 'Instrumentos Derivativos (f)' # Uma conta que pode ter valores zero\n",
-    "data_inicio, data_fim = 202301, 202306\n",
+    "data_inicio, data_fim = 202301, 202506\n",
     "\n",
     "print(\"(A) Comportamento Padrão (remove linhas com NaN):\")\n",
     "serie_padrao = analisador.get_serie_temporal_indicador(\n",
@@ -221,7 +213,7 @@
     "tabela_invalida = analisador.comparar_indicadores(\n",
     "    identificadores=['BANCO QUE NAO EXISTE', '99999999'],\n",
     "    indicadores={'Indicador Inválido': {'tipo': 'COSIF', 'conta': 'CONTA QUE NAO EXISTE'}},\n",
-    "    data=202403\n",
+    "    data=202506\n",
     ")\n",
     "print(\"Resultado da tabela com inputs inválidos (esperado: tabela com erros e Nones):\")\n",
     "display(tabela_invalida)\n",
