--- a/notebooks/analysis/full_table.ipynb
+++ b/notebooks/analysis/full_table.ipynb
@@ -15,32 +15,23 @@
     "# ------------------------------------------------------------------------------\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import sys\n",
-    "import numpy as np\n",
+    "from bacen_analysis import AnalisadorBancario\n",
     "\n",
     "print(\"--- 1. INICIANDO SETUP ---\")\n",
-    "\n",
-    "# Adiciona o diretório 'Code' ao path para encontrar o DataUtils\n",
-    "code_dir = Path('..').resolve() / 'Code'\n",
-    "if str(code_dir) not in sys.path:\n",
-    "    sys.path.append(str(code_dir))\n",
-    "\n",
-    "from DataUtils import AnalisadorBancario\n",
     "\n",
     "# Configurações de exibição do Pandas\n",
     "pd.set_option('display.float_format', lambda x: f'{x:,.2f}')\n",
     "pd.set_option('display.max_rows', 100)\n",
     "\n",
     "# Inicializa o Analisador (carrega todos os dados em memória)\n",
-    "output_dir = Path('..').resolve() / 'Output'\n",
+    "output_dir = Path('../../data/output').resolve()\n",
     "analisador = AnalisadorBancario(diretorio_output=str(output_dir))\n",
     "\n",
     "# Garante que a pasta de resultados exista\n",
-    "results_dir = Path('.') / 'Results'\n",
+    "results_dir = Path('../../data/results').resolve()\n",
     "results_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(\"--- SETUP CONCLUÍDO. ANALISADOR PRONTO. ---\")\n",
-    "print(\"-\" * 60)"
+    "print(\"--- SETUP CONCLUÍDO. ANALISADOR PRONTO. ---\")"
    ]
   },
   {
@@ -59,9 +50,9 @@
     "print(\"--- 2. CONFIGURANDO PARÂMETROS DA ANÁLISE ---\")\n",
     "\n",
     "# --- Período da Análise ---\n",
-    "DATA_INICIO_SERIES = 202201\n",
-    "DATA_FIM_SERIES = 202412\n",
-    "DATA_SNAPSHOT = 202412\n",
+    "DATA_INICIO_SERIES = 202501\n",
+    "DATA_FIM_SERIES = 202506\n",
+    "DATA_SNAPSHOT = 202506\n",
     "\n",
     "# --- Geração Inteligente de Datas ---\n",
     "data_inicio_dt = pd.to_datetime(f'{DATA_INICIO_SERIES}', format='%Y%m')\n",
@@ -95,24 +86,27 @@
     "# --- GRUPO 1: INDICADORES PARA SÉRIES TEMPORAIS (HISTÓRICO COMPLETO) ---\n",
     "INDICADORES_SERIES_TEMPORAIS = {\n",
     "    'Ativo Total': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
-    "    'RWA': {'fonte': 'IFDATA', 'conta': 'Patrimônio de Referência para Comparação com o RWA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'RWA': {'fonte': 'IFDATA', 'conta': 'Patrimônio de Referência para Comparação com o RWA (e)', 'escopo_ifdata': 'prudencial'},\n",
     "    'Índice de Basileia': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
-    "    'Lucro Líquido': {'fonte': 'IFDATA'},\n",
-    "    'Patrimônio Líquido': {'fonte': 'IFDATA'},\n",
-    "    'Volume de Operações tipo G': {'fonte': 'IFDATA', 'conta': 'G'},\n",
-    "    'Volume de Operações tipo H': {'fonte': 'IFDATA', 'conta': 'H'},\n",
-    "    'Total de Volume de Operações': {'fonte': 'IFDATA', 'conta': 'Total Geral'}\n",
+    "    'Lucro Líquido': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Patrimônio Líquido': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Valor Contábil Bruto (e1)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Valor Contábil Bruto (f1)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Valor Contábil Bruto (g1)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Valor Contábil Bruto (h1)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Perda Esperada (e2)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Perda Esperada (f2)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Perda Esperada (g2)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'},\n",
+    "    'Perda Esperada (h2)': {'fonte': 'IFDATA', 'escopo_ifdata': 'prudencial'}\n",
     "}\n",
     "\n",
     "# --- GRUPO 2: INDICADORES PARA SNAPSHOT (APENAS DATA MAIS RECENTE) ---\n",
     "INDICADORES_SNAPSHOT = {\n",
-    "        'Volume de Operações tipo A': {'fonte': 'IFDATA', 'conta': 'A'},\n",
-    "        'Volume de Operações tipo AA': {'fonte': 'IFDATA', 'conta': 'AA'},\n",
-    "        'Volume de Operações tipo B': {'fonte': 'IFDATA', 'conta': 'B'},\n",
-    "        'Volume de Operações tipo C': {'fonte': 'IFDATA', 'conta': 'C'},\n",
-    "        'Volume de Operações tipo D': {'fonte': 'IFDATA', 'conta': 'D'},\n",
-    "        'Volume de Operações tipo E': {'fonte': 'IFDATA', 'conta': 'E'},\n",
-    "        'Volume de Operações tipo F': {'fonte': 'IFDATA', 'conta': 'F'},\n",
+    "        'Carteira de Clientes C1': {'fonte': 'IFDATA', 'conta': 'C1'},\n",
+    "        'Carteira de Clientes C2': {'fonte': 'IFDATA', 'conta': 'C2'},\n",
+    "        'Carteira de Clientes C3': {'fonte': 'IFDATA', 'conta': 'C3'},\n",
+    "        'Carteira de Clientes C4': {'fonte': 'IFDATA', 'conta': 'C4'},\n",
+    "        'Carteira de Clientes C5': {'fonte': 'IFDATA', 'conta': 'C5'},\n",
     "        'Depósitos a Prazo': {'fonte': 'IFDATA', 'conta': 'Depósitos a Prazo (a4)', 'escopo_ifdata': 'prudencial'},\n",
     "        'Letra de Crédito Imobiliário': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito Imobiliário (c1)', 'escopo_ifdata': 'prudencial'},\n",
     "        'Letra de Crédito Agronegócio': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito do Agronegócio (c2)', 'escopo_ifdata': 'prudencial'},\n",
@@ -122,8 +116,7 @@
     "# --- ATRIBUTOS CADASTRAIS (DADOS ESTÁTICOS) ---\n",
     "ATRIBUTOS_CADASTRAIS = ['TCB_IFD_CAD']\n",
     "\n",
-    "print(\"--- CONFIGURAÇÃO CARREGADA. ---\")\n",
-    "print(\"-\" * 60)"
+    "print(\"--- CONFIGURAÇÃO CARREGADA. ---\")"
    ]
   },
   {
@@ -134,29 +127,16 @@
    "outputs": [],
    "source": [
     "# ==============================================================================\n",
-    "# CÉLULA 3: COLETA OTIMIZADA E EXPORTAÇÃO DIRETA\n",
+    "# CÉLULA 3: COLETA OTIMIZADA E EXPORTAÇÃO DIRETA (BATCH PROCESSING)\n",
     "# ==============================================================================\n",
-    "# Descrição: Este pipeline usa a técnica de pré-filtragem para máxima performance\n",
-    "# e exporta os componentes brutos diretamente para o Power BI.\n",
+    "# Descrição: Pipeline otimizado usando batch processing para máxima performance.\n",
+    "# Reduz drasticamente o número de chamadas de função através de processamento em lote.\n",
     "# ------------------------------------------------------------------------------\n",
+    "\n",
     "if LISTA_BANCOS:\n",
-    "    # --- ETAPA 1: Pré-filtragem para Performance (\"Bulk Filtering\") ---\n",
-    "    print(\"--- 3.1. Otimização: Pré-filtrando DataFrames para máxima performance... ---\")\n",
-    "    \n",
     "    todos_indicadores = {**INDICADORES_SERIES_TEMPORAIS, **INDICADORES_SNAPSHOT}\n",
-    "    contas_para_buscar = [info.get('conta', nome) for nome, info in todos_indicadores.items()]\n",
-    "\n",
-    "    # Filtra o DataFrame IF.DATA uma única vez\n",
-    "    df_ifdata_trabalho = analisador.df_ifd_val[\n",
-    "        (analisador.df_ifd_val['NOME_CONTA_IFD_VAL'].isin(contas_para_buscar)) | \n",
-    "        (analisador.df_ifd_val['CONTA_IFD_VAL'].astype(str).isin(contas_para_buscar))\n",
-    "    ].copy()\n",
-    "\n",
-    "    original_ifd_val = analisador.df_ifd_val\n",
-    "    analisador.df_ifd_val = df_ifdata_trabalho\n",
-    "    print(f\" -> DataFrame IF.DATA pré-filtrado de {len(original_ifd_val):,} para {len(df_ifdata_trabalho):,} linhas.\")\n",
     "    \n",
-    "    # --- Traduz o modo de tratamento global para parâmetros de função ---\n",
+    "    # Traduz o modo de tratamento global para parâmetros de função\n",
     "    parametros_tratamento = {}\n",
     "    if MODO_TRATAMENTO_DADOS == 'remover_nulos':\n",
     "        parametros_tratamento = {'drop_na': True}\n",
@@ -166,71 +146,81 @@
     "        parametros_tratamento = {'drop_na': False}\n",
     "    elif MODO_TRATAMENTO_DADOS == 'remover_zeros_e_nulos':\n",
     "        parametros_tratamento = {'replace_zeros_with_nan': True, 'drop_na': True}\n",
-    "\n",
-    "    # --- ETAPA 2: Coleta de Dados com Lógica Dinâmica ---\n",
-    "    dfs_coletados = []\n",
-    "    print(\"\\n--- 3.2. Coletando todos os componentes necessários... ---\")\n",
+    "    \n",
+    "    # Construção da lista de requisições para batch processing\n",
+    "    requisicoes = []\n",
     "    \n",
     "    for banco in LISTA_BANCOS:\n",
     "        for nome_indicador, info in todos_indicadores.items():\n",
-    "            # Define a lista de datas correta para cada indicador\n",
+    "            # Determina a lista de datas correta para cada indicador\n",
     "            if nome_indicador in INDICADORES_SERIES_TEMPORAIS:\n",
-    "                datas_para_buscar = datas_trimestrais if info['fonte'].upper() == 'IFDATA' else datas_mensais\n",
+    "                datas_para_buscar = (\n",
+    "                    datas_trimestrais \n",
+    "                    if info['fonte'].upper() == 'IFDATA' \n",
+    "                    else datas_mensais\n",
+    "                )\n",
     "            else:\n",
     "                datas_para_buscar = [DATA_SNAPSHOT]\n",
     "            \n",
-    "            # Constrói dinamicamente os parâmetros para a chamada da função\n",
-    "            kwargs_chamada = {\n",
+    "            # Constrói requisição\n",
+    "            req = {\n",
     "                'identificador': banco,\n",
     "                'conta': info.get('conta', nome_indicador),\n",
     "                'fonte': info['fonte'],\n",
-    "                'datas': datas_para_buscar\n",
+    "                'datas': datas_para_buscar,\n",
+    "                'nome_indicador': nome_indicador\n",
     "            }\n",
     "            \n",
-    "            # Adiciona parâmetros opcionais apenas se definidos no dicionário do indicador\n",
+    "            # Adiciona parâmetros opcionais apenas se definidos\n",
     "            if 'documento_cosif' in info:\n",
-    "                kwargs_chamada['documento_cosif'] = info['documento_cosif']\n",
+    "                req['documento_cosif'] = info['documento_cosif']\n",
     "            if 'escopo_ifdata' in info:\n",
-    "                kwargs_chamada['escopo_ifdata'] = info['escopo_ifdata']\n",
-    "                \n",
-    "            # Adiciona os parâmetros globais de tratamento de dados\n",
-    "            kwargs_chamada.update(parametros_tratamento)\n",
+    "                req['escopo_ifdata'] = info['escopo_ifdata']\n",
     "            \n",
-    "            # Chama a função usando o desempacotamento de dicionário\n",
-    "            df_serie = analisador.get_serie_temporal_indicador(**kwargs_chamada)\n",
-    "            \n",
-    "            if not df_serie.empty:\n",
-    "                dfs_coletados.append(df_serie)\n",
-    "\n",
-    "    # Restaura o DataFrame original no analisador\n",
-    "    analisador.df_ifd_val = original_ifd_val\n",
-    "    print(\"\\n -> Coleta concluída. DataFrame original restaurado.\")\n",
-    "\n",
-    "    if not dfs_coletados:\n",
-    "        print(\"\\nNenhum dado foi encontrado para os parâmetros definidos.\")\n",
+    "            requisicoes.append(req)\n",
+    "    \n",
+    "    print(\"Coletando dados...\")\n",
+    "    \n",
+    "    # CHAMADA ÚNICA EM LOTE - Substitui centenas de chamadas individuais\n",
+    "    df_long_base = analisador.get_series_temporais_lote(\n",
+    "        requisicoes,\n",
+    "        **parametros_tratamento\n",
+    "    )\n",
+    "    \n",
+    "    if df_long_base.empty:\n",
+    "        print(\"Nenhum dado foi encontrado para os parâmetros definidos.\")\n",
     "    else:\n",
-    "        # --- ETAPA 3: Consolidação e Exportação Final ---\n",
-    "        print(\"\\n--- 3.3. Consolidando e exportando dados para o Power BI... ---\")\n",
-    "        df_long_base = pd.concat(dfs_coletados, ignore_index=True)\n",
+    "        # Renomeia a coluna 'Conta' para 'Indicador' (já está com nome_indicador)\n",
+    "        df_long_base.rename(columns={'Conta': 'Indicador'}, inplace=True)\n",
     "        \n",
-    "        mapa_nomes = {info.get('conta', nome): nome for nome, info in todos_indicadores.items()}\n",
-    "        df_long_base['Indicador'] = df_long_base['Conta'].replace(mapa_nomes)\n",
+    "        # Busca atributos cadastrais\n",
+    "        df_atributos = analisador.get_atributos_cadastro(\n",
+    "            identificador=LISTA_BANCOS, \n",
+    "            atributos=ATRIBUTOS_CADASTRAIS\n",
+    "        )\n",
     "        \n",
-    "        df_atributos = analisador.get_atributos_cadastro(identificador=LISTA_BANCOS, atributos=ATRIBUTOS_CADASTRAIS)\n",
-    "        df_para_bi = pd.merge(df_long_base, df_atributos, on=['CNPJ_8', 'Nome_Entidade'], how='left')\n",
-    "\n",
-    "        colunas_finais = ['DATA', 'Nome_Entidade', 'CNPJ_8', 'Indicador', 'Valor'] + [col for col in ATRIBUTOS_CADASTRAIS if col in df_para_bi.columns]\n",
+    "        # Merge com atributos cadastrais\n",
+    "        df_para_bi = pd.merge(\n",
+    "            df_long_base, \n",
+    "            df_atributos, \n",
+    "            on=['CNPJ_8', 'Nome_Entidade'], \n",
+    "            how='left'\n",
+    "        )\n",
+    "        \n",
+    "        # Organiza colunas finais\n",
+    "        colunas_finais = ['DATA', 'Nome_Entidade', 'CNPJ_8', 'Indicador', 'Valor'] + [\n",
+    "            col for col in ATRIBUTOS_CADASTRAIS if col in df_para_bi.columns\n",
+    "        ]\n",
     "        df_para_bi = df_para_bi[colunas_finais]\n",
-    "\n",
-    "        nome_arquivo_saida = f'relatorio_powerbi_202412.xlsx'\n",
+    "        \n",
+    "        # Exporta para Excel\n",
+    "        nome_arquivo_saida = f'relatorio_powerbi_202506.xlsx'\n",
     "        caminho_saida = results_dir / nome_arquivo_saida\n",
     "        df_para_bi.to_excel(caminho_saida, index=False, engine='openpyxl')\n",
-    "\n",
-    "        print(\"\\n\" + \"=\"*60)\n",
-    "        print(\">>> SUCESSO! <<<\")\n",
-    "        print(f\"Relatório de COMPONENTES para o Power BI foi gerado com {len(df_para_bi):,} linhas.\")\n",
-    "        print(f\"Arquivo salvo em: '{caminho_saida.resolve()}'\")\n",
-    "        print(\"=\"*60)\n",
+    "        \n",
+    "        print(\"Relatório gerado com sucesso!\")\n",
+    "        print(f\"Arquivo: {caminho_saida.resolve()}\")\n",
+    "        print(f\"Linhas exportadas: {len(df_para_bi):,}\")\n",
     "else:\n",
     "    print(\"A lista de bancos está vazia. Nenhuma análise foi executada.\")"
    ]
