--- a/notebooks/etl/data_download.ipynb
+++ b/notebooks/etl/data_download.ipynb
@@ -19,7 +19,7 @@
     "import warnings\n",
     "import re\n",
     "from pathlib import Path\n",
-    "import DataUtils as du\n",
+    "from bacen_analysis import standardize_cnpj_base8\n",
     "import time\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
@@ -37,20 +37,22 @@
     "# --- Configurações de Datas e Diretórios ---\n",
     "# Use datas fixas para reprodutibilidade ou ajuste para datas dinâmicas.\n",
     "# Ex: end=pd.Timestamp.now().strftime('%Y-%m-%d')\n",
-    "DATE_START = '2024-01-01'\n",
-    "DATE_END   = '2024-12-31'\n",
+    "DATE_START = '2025-01-01'\n",
+    "DATE_END   = '2025-06-30'\n",
     "\n",
     "date_range_monthly = pd.date_range(start=DATE_START, end=DATE_END, freq='M').strftime(\"%Y%m\").tolist()\n",
     "date_range_quarterly = pd.date_range(start=DATE_START, end=DATE_END, freq='Q').strftime(\"%Y%m\").tolist()\n",
     "\n",
     "# Estrutura de diretórios\n",
-    "base_dir    = Path('..').resolve() # O notebook está na raiz do projeto ou em 'Code'\n",
-    "dir_inputs  = base_dir / 'Input'\n",
-    "dir_outputs = base_dir / 'Output'\n",
-    "for d in (dir_inputs, dir_outputs):\n",
+    "base_dir    = Path('../..').resolve() # O notebook está em notebooks/etl/, então sobe dois níveis para a raiz\n",
+    "dir_data    = base_dir / 'data'\n",
+    "dir_inputs  = dir_data / 'input'\n",
+    "dir_outputs = dir_data / 'output'\n",
+    "for d in (dir_data, dir_inputs, dir_outputs):\n",
     "    d.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "print(f\"Diretório Base: {base_dir}\")\n",
+    "print(f\"Diretório de Dados: {dir_data}\")\n",
     "print(f\"Diretório de Inputs: {dir_inputs}\")\n",
     "print(f\"Diretório de Outputs: {dir_outputs}\")\n",
     "print(f\"\\nPeríodo de Análise Mensal: de {date_range_monthly[0]} a {date_range_monthly[-1]}\")\n",
@@ -217,7 +219,7 @@
     "        return\n",
     "\n",
     "    df_final = pd.concat(df_list, ignore_index=True)\n",
-    "    df_final['CNPJ_8'] = du.standardize_cnpj_base8(df_final['CNPJ'])\n",
+    "    df_final['CNPJ_8'] = standardize_cnpj_base8(df_final['CNPJ'])\n",
     "    df_final['DATA'] = pd.to_datetime(df_final['DATA'], format='%Y%m').dt.strftime('%Y%m').astype(int)\n",
     "\n",
     "    rename_map = {\n",
@@ -488,8 +490,8 @@
     "    print(f\"\\nShape do DF consolidado (bruto): {df_ifdata_cadastro.shape}\")\n",
     "\n",
     "    # Padronização das chaves\n",
-    "    df_ifdata_cadastro['CNPJ_8'] = du.standardize_cnpj_base8(df_ifdata_cadastro['CodInst'])\n",
-    "    df_ifdata_cadastro['CNPJ_LIDER_8_IFD_CAD'] = du.standardize_cnpj_base8(df_ifdata_cadastro['CnpjInstituicaoLider'])\n",
+    "    df_ifdata_cadastro['CNPJ_8'] = standardize_cnpj_base8(df_ifdata_cadastro['CodInst'])\n",
+    "    df_ifdata_cadastro['CNPJ_LIDER_8_IFD_CAD'] = standardize_cnpj_base8(df_ifdata_cadastro['CnpjInstituicaoLider'])\n",
     "\n",
     "    # Renomeação inicial e padronização de data\n",
     "    df_ifdata_cadastro.rename(columns={'Data': 'DATA'}, inplace=True)\n",
