Added required variables for queries, error and logging

--- a/notebooks/analysis/example.ipynb
+++ b/notebooks/analysis/example.ipynb
@@ -48,11 +48,11 @@
     "\n",
     "# --- 1.1: Buscando dados COSIF (por documento específico) ---\n",
     "print(\"\\n--- 1.1: Consulta de dados COSIF (Prudencial) ---\")\n",
-    "# A função determina o tipo (prudencial) automaticamente pelo documento 4060.\n",
     "dados_cosif = analisador.get_dados_cosif(\n",
     "    identificador='00000000', # CNPJ do Banco do Brasil\n",
     "    contas=['ATIVO TOTAL', 'PATRIMONIO LIQUIDO'],\n",
     "    datas=202403,\n",
+    "    tipo='prudencial',  # OBRIGATÓRIO: 'prudencial' ou 'individual'\n",
     "    documentos=4060\n",
     ")\n",
     "print(\"Resultado para 'BANCO DO BRASIL S.A.' (COSIF Prudencial):\")\n",
@@ -101,8 +101,14 @@
     "# --- 2.1: Tabela Comparativa de Pares ---\n",
     "print(\"\\n--- 2.1: Tabela comparativa de indicadores (Pares) ---\")\n",
     "# Combinando fontes e escopos diferentes em uma única chamada.\n",
+    "# IMPORTANTE: Cada indicador COSIF deve especificar seu próprio documento_cosif na configuração\n",
     "indicadores = {\n",
-    "    'Patrimônio Líquido': {'tipo': 'COSIF', 'conta': 'PATRIMONIO LIQUIDO', 'documento_cosif': 4010},\n",
+    "    'Patrimônio Líquido': {\n",
+    "        'tipo': 'COSIF', \n",
+    "        'conta': 'PATRIMONIO LIQUIDO', \n",
+    "        'tipo_cosif': 'individual',\n",
+    "        'documento_cosif': 4010  # OBRIGATÓRIO: especificar por indicador\n",
+    "    },\n",
     "    'Ativo Total': {'tipo': 'IFDATA', 'conta': 'Ativo Total', 'escopo_ifdata': 'prudencial'},\n",
     "    'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia', 'escopo_ifdata': 'prudencial'},\n",
     "    'Segmento': {'tipo': 'ATRIBUTO', 'atributo': 'SEGMENTOTB_IFD_CAD'}\n",
@@ -112,7 +118,7 @@
     "tabela_comparativa = analisador.comparar_indicadores(\n",
     "    identificadores=bancos,\n",
     "    indicadores=indicadores,\n",
-    "    data=202506\n",
+    "    data=202403\n",
     ")\n",
     "print(\"Comparativo de indicadores para os principais bancos:\")\n",
     "display(tabela_comparativa)\n",
@@ -162,16 +168,30 @@
     "\n",
     "# --- 3.1: Comparando Escopos no IF.DATA ---\n",
     "print(\"\\n--- 3.1: Diferença entre escopos de dados no IF.DATA ---\")\n",
+    "from bacen_analysis import (\n",
+    "    EntityNotFoundError,\n",
+    "    DataUnavailableError,\n",
+    "    InvalidScopeError\n",
+    ")\n",
+    "\n",
     "conta_imob = 'Ativo Total'\n",
     "data_imob = 202503\n",
     "id_bradesco = 'BANCO BRADESCO S.A.'\n",
     "\n",
     "# Usando o novo parâmetro `escopo` para comparar os mesmos dados\n",
-    "dado_ifd_prudencial = analisador.get_dados_ifdata(identificador=id_bradesco, contas=[conta_imob], datas=data_imob, escopo='prudencial')\n",
-    "dado_ifd_individual = analisador.get_dados_ifdata(identificador=id_bradesco, contas=[conta_imob], datas=data_imob, escopo='individual')\n",
+    "try:\n",
+    "    dado_ifd_prudencial = analisador.get_dados_ifdata(identificador=id_bradesco, contas=[conta_imob], datas=data_imob, escopo='prudencial')\n",
+    "    val_prud = dado_ifd_prudencial['VALOR_CONTA_IFD_VAL'].iloc[0]\n",
+    "except (EntityNotFoundError, DataUnavailableError, InvalidScopeError) as e:\n",
+    "    val_prud = \"N/A\"\n",
+    "    print(f\"Aviso: {e}\")\n",
     "\n",
-    "val_prud = dado_ifd_prudencial['VALOR_CONTA_IFD_VAL'].iloc[0] if not dado_ifd_prudencial.empty else \"N/A\"\n",
-    "val_ind = dado_ifd_individual['VALOR_CONTA_IFD_VAL'].iloc[0] if not dado_ifd_individual.empty else \"N/A\"\n",
+    "try:\n",
+    "    dado_ifd_individual = analisador.get_dados_ifdata(identificador=id_bradesco, contas=[conta_imob], datas=data_imob, escopo='individual')\n",
+    "    val_ind = dado_ifd_individual['VALOR_CONTA_IFD_VAL'].iloc[0]\n",
+    "except (EntityNotFoundError, DataUnavailableError, InvalidScopeError) as e:\n",
+    "    val_ind = \"N/A\"\n",
+    "    print(f\"Aviso: {e}\")\n",
     "\n",
     "print(f\"Ativo Total (Prudencial) do Bradesco: {val_prud}\")\n",
     "print(f\"Ativo Total (Individual) do Bradesco: {val_ind}\")\n",
@@ -209,12 +229,23 @@
     "\n",
     "# --- 3.3: Robustez Contra Inputs Inválidos ---\n",
     "print(\"\\n--- 3.3: Tratamento de inputs inválidos ---\")\n",
-    "# A classe deve retornar avisos e DataFrames vazios ou com N/A, sem quebrar.\n",
-    "tabela_invalida = analisador.comparar_indicadores(\n",
-    "    identificadores=['BANCO QUE NAO EXISTE', '99999999'],\n",
-    "    indicadores={'Indicador Inválido': {'tipo': 'COSIF', 'conta': 'CONTA QUE NAO EXISTE'}},\n",
-    "    data=202506\n",
-    ")\n",
+    "# A classe pode lançar exceções para inputs inválidos. Use try/except para tratamento.\n",
+    "try:\n",
+    "    tabela_invalida = analisador.comparar_indicadores(\n",
+    "        identificadores=['BANCO QUE NAO EXISTE', '99999999'],\n",
+    "        indicadores={\n",
+    "            'Indicador Inválido': {\n",
+    "                'tipo': 'COSIF',\n",
+    "                'conta': 'CONTA QUE NAO EXISTE',\n",
+    "                'tipo_cosif': 'prudencial',  # OBRIGATÓRIO\n",
+    "                'documento_cosif': 4060  # OBRIGATÓRIO: especificar por indicador\n",
+    "            }\n",
+    "        },\n",
+    "        data=202506\n",
+    "    )\n",
+    "except (EntityNotFoundError, DataUnavailableError, InvalidScopeError) as e:\n",
+    "    print(f\"Erro ao comparar indicadores: {e}\")\n",
+    "    tabela_invalida = pd.DataFrame()  # Ou criar DataFrame com mensagens de erro\n",
     "print(\"Resultado da tabela com inputs inválidos (esperado: tabela com erros e Nones):\")\n",
     "display(tabela_invalida)\n",
     "print(\"-\" * 80)\n",
