--- a/notebooks/analysis/full_table.ipynb
+++ b/notebooks/analysis/full_table.ipynb
@@ -102,11 +102,11 @@
     "\n",
     "# --- GRUPO 2: INDICADORES PARA SNAPSHOT (APENAS DATA MAIS RECENTE) ---\n",
     "INDICADORES_SNAPSHOT = {\n",
-    "        'Carteira de Clientes C1': {'fonte': 'IFDATA', 'conta': 'C1'},\n",
-    "        'Carteira de Clientes C2': {'fonte': 'IFDATA', 'conta': 'C2'},\n",
-    "        'Carteira de Clientes C3': {'fonte': 'IFDATA', 'conta': 'C3'},\n",
-    "        'Carteira de Clientes C4': {'fonte': 'IFDATA', 'conta': 'C4'},\n",
-    "        'Carteira de Clientes C5': {'fonte': 'IFDATA', 'conta': 'C5'},\n",
+    "        'Carteira de Clientes C1': {'fonte': 'IFDATA', 'conta': 'C1', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Carteira de Clientes C2': {'fonte': 'IFDATA', 'conta': 'C2', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Carteira de Clientes C3': {'fonte': 'IFDATA', 'conta': 'C3', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Carteira de Clientes C4': {'fonte': 'IFDATA', 'conta': 'C4', 'escopo_ifdata': 'prudencial'},\n",
+    "        'Carteira de Clientes C5': {'fonte': 'IFDATA', 'conta': 'C5', 'escopo_ifdata': 'prudencial'},\n",
     "        'Depósitos a Prazo': {'fonte': 'IFDATA', 'conta': 'Depósitos a Prazo (a4)', 'escopo_ifdata': 'prudencial'},\n",
     "        'Letra de Crédito Imobiliário': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito Imobiliário (c1)', 'escopo_ifdata': 'prudencial'},\n",
     "        'Letra de Crédito Agronegócio': {'fonte': 'IFDATA', 'conta': 'Letras de Crédito do Agronegócio (c2)', 'escopo_ifdata': 'prudencial'},\n",
